fixed footer and responsive design

--- a/templates/order.html
+++ b/templates/order.html
@@ -111,5 +111,31 @@
             결제는 계좌이체만 가능하며 현금영수증 또는 세금계산서(VAT 별도)를 발행하여 드립니다. <br>
         </div>
     </main>
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- 로고 -->
+            <div class="footer-logo">
+                <img src="{{ url_for('static', filename='images/ih_logo2.png') }}" alt="Individual by Hand Logo">
+            </div>
+    
+            <!-- 중간 텍스트 -->
+            <div class="footer-text">
+                <h2>Individual by Hand</h2>
+                <p>Elevate Your Experience with Exquisite Leather Craftsmanship</p>
+            </div>
+    
+            <!-- 소셜 미디어 링크 -->
+            <div class="footer-social">
+                <h2>Find Us on</h2>
+                <ul>
+                    <li><a href="https://www.instagram.com/individual_byhand" target="_blank">Instagram</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">LinkedIn</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    
+    
 </body>
 </html>
