--- a/templates/product.html
+++ b/templates/product.html
@@ -72,6 +72,32 @@
         </div>
     </div>
 
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- 로고 -->
+            <div class="footer-logo">
+                <img src="{{ url_for('static', filename='images/ih_logo2.png') }}" alt="Individual by Hand Logo">
+            </div>
+    
+            <!-- 중간 텍스트 -->
+            <div class="footer-text">
+                <h2>Individual by Hand</h2>
+                <p>Elevate Your Experience with Exquisite Leather Craftsmanship</p>
+            </div>
+    
+            <!-- 소셜 미디어 링크 -->
+            <div class="footer-social">
+                <h2>Find Us on</h2>
+                <ul>
+                    <li><a href="https://www.instagram.com/individual_byhand" target="_blank">Instagram</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">LinkedIn</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    
+
     <!-- JS 파일 로드 -->
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
