--- a/templates/order_success.html
+++ b/templates/order_success.html
@@ -128,6 +128,33 @@
 
         <!-- 홈으로 이동 버튼 -->
         <a href="{{ url_for('home') }}" class="home-button">HOME</a>
-    </div>    
+    </div>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- 로고 -->
+            <div class="footer-logo">
+                <img src="{{ url_for('static', filename='images/ih_logo2.png') }}" alt="Individual by Hand Logo">
+            </div>
+    
+            <!-- 중간 텍스트 -->
+            <div class="footer-text">
+                <h2>Individual by Hand</h2>
+                <p>Elevate Your Experience with Exquisite Leather Craftsmanship</p>
+            </div>
+    
+            <!-- 소셜 미디어 링크 -->
+            <div class="footer-social">
+                <h2>Find Us on</h2>
+                <ul>
+                    <li><a href="https://www.instagram.com/individual_byhand" target="_blank">Instagram</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">LinkedIn</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    
+    
 </body>
 </html>
