--- a/templates/order_success.html
+++ b/templates/order_success.html
@@ -6,6 +6,8 @@
     <title>Order Success</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+
     <style>
         body {
             font-family: 'Noto Sans KR', sans-serif;
