--- a/templates/product.html
+++ b/templates/product.html
@@ -7,6 +7,8 @@
     <!-- CSS 파일 로드 -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/product.css') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+
 </head>
 <body>
     <header>
