--- a/templates/products.html
+++ b/templates/products.html
@@ -6,7 +6,7 @@
     <title>All Products</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/products.css') }}">
-
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 </head>
 <body>
     <header>
